# auxiliarArquitecturaMotores

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  breakout.cpp
assets/: creditos.txt
breakout_lib/: CMakeLists.txt
breakout_lib/private/: Ball.cpp  Block.cpp  Paddle.cpp
breakout_lib/public/: Ball.hpp  Block.hpp  Paddle.hpp
